fix: only overflow x-coordinate

--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -3,7 +3,7 @@ main {
 }
 
 pre {
-	overflow: auto;
+	overflow-x: auto;
 }
 
 .home-wrapper {
